# pi-p-proiect-echipa01

./: CMakeLists.txt  README.md
robot/: Behavior.cpp  Behavior.hpp  CMakeLists.txt  CMakeLists.txt~  EmotionDetection.cpp  EmotionDetection.hpp  main.cpp  test.cpp
robot/build-naoqi-sdk/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
robot/build-naoqi-sdk/sdk/share/qi/: path.conf
robot/build-sys-linux-x86_64/: CMakeCache.txt  dependencies.cmake
robot/build-sys-linux-x86_64/sdk/share/qi/: path.conf
robot/client-server/using-intern-functions/: qiproject.xml
robot/on-robot/using-intern-functions/: Behavior.cpp  CMakeLists.txt  EmotionDetection.cpp  qiproject.xml
robot/on-robot/with-opencv/: CMakeLists.txt  main.cpp
train/: svm.cpp  testSvm.py  train.py
